syntax = "proto3";

option java_multiple_files = true;
option java_package = "vn.elca.employer.common";

import "google/protobuf/wrappers.proto";

service EmployerService {
  rpc getEmployer (EmployerGetRequest) returns (EmployerGetResponse);

  rpc setEmployer (EmployerSetRequest) returns (EmployerSetResponse);

  rpc deleteEmployer (EmployerDeleteRequest) returns (EmployerDeleteResponse);
}

message EmployerGetRequest {
  Fund fund = 1;

  google.protobuf.StringValue number = 2;

  google.protobuf.StringValue name = 3;

  google.protobuf.StringValue numberIde = 4;

  google.protobuf.StringValue startDate = 5;

  google.protobuf.StringValue endDate = 6;
}

message EmployerGetResponse {
  repeated EmployerProto employers = 1;
}

message EmployerSetRequest {
  EmployerProto employer = 1;
}

message EmployerSetResponse {
  bool isOK = 1;

  string message = 2;

  EmployerProto employer = 3;
}

message EmployerDeleteRequest {
  int64 id = 1;
}

message EmployerDeleteResponse {
  bool isOK = 1;

  string message = 2;
}

enum Fund {
  FUND_CANTONAL = 0;

  FUND_PROFESSIONAL = 1;
}

message EmployerProto {
  google.protobuf.Int64Value id = 1;

  Fund fund = 2;

  google.protobuf.StringValue number = 3;

  string name = 4;

  string numberIde = 5;

  string startDate = 6;

  google.protobuf.StringValue endDate = 7;

  repeated EmployeeProto employees = 8;
}

message EmployeeProto {
  google.protobuf.Int64Value id = 1;

  string numberAvs = 2;

  string lastName = 3;

  string firstName = 4;

  string startDate = 5;

  string endDate = 6;

  double avsAiApg = 7;

  double ac = 8;

  double af = 9;

  google.protobuf.Int64Value employerId = 10;
}

